[package]
name = "mb-solana"
version = "0.0.9"
edition = "2021"
description = "my solana lib helpers and cli tools"
license = "Unlicense"

[[bin]]
name = "mb-solana"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.14", features = ["derive", "cargo"] }
clap_complete = "3.2.3"
colored_json = "2.1.0"
dotenv = "0.15.0"
itertools = "0.10.3"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json", "socks"] }
rpassword = "7.0.0"
rust_decimal = "1.25.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.26"
solana-client = "1.11.4"
solana-sdk = "1.11.4"
tiny-bip39 = "*"
typed-builder = "0.10.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
once_cell = "1.13.0"
rstest = "0.15.0"

